--- a/TestSpider/UI/UI.csproj
+++ b/TestSpider/UI/UI.csproj
@@ -74,6 +74,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\Method.csproj">
+      <Project>{5eea8881-1456-4d78-b822-b87ca92e350d}</Project>
+      <Name>Method</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
